src/css/licensesplash.css
@font-face {
  font-family: "Web437";
  src: url("../bin/fonts/Web437/Web437_IBM_VGA_8x16.woff") format("woff");
}

@font-face {
  font-family: "Web437-wide";
  src: url("../bin/fonts/Web437/Web437_PhoenixVGA_9x14.woff") format("woff");
}

@font-face {
  font-family: "Web437-narrow";
  src: url("../bin/fonts/Web437/WebPlus_ToshibaSat_8x16.woff") format("woff");
}

html,
body {
  height: 100%;
  background: rgb(0, 0, 0);
}

body {
  overflow: hidden;
  user-select: none;
}

.instructions {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 28px;
  z-index: 10;
  background: rgb(0, 0, 255);
}

.instructions span {
  width: 100%;
  font-size: 16px;
  color: rgb(255, 255, 255);
  text-align: center;
  font-family: "Web437";
  margin: 0;
  position: absolute;
  top: 56%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.license-container {
  position: absolute;
  top: 100%;
  left: 50%;
  width: 640px;
  margin-left: -330px;
  text-align: left;
  animation: 630s licenseroll linear infinite;
  background: rgba(0, 0, 0, 0.2);
  padding-left: 10px;
  padding-right: 10px;
}

pre {
  overflow-x: auto;
  white-space: pre-wrap;
  white-space: -moz-pre-wrap;
  white-space: -pre-wrap;
  white-space: -o-pre-wrap;
  word-wrap: break-word;
}

h1,
h2 {
  font-family: "Web437";
  color: #00ff00;
  font-weight: normal;
}

h3,
p {
  font-family: "Web437-wide";
  color: #00ff00;
  font-weight: normal;
}

code,
code * {
  font-family: "Web437-narrow";
  color: #00ff00;
}

@keyframes licenseroll {
  0% {
    top: 100%;
  }
  100% {
    /* Increase (or decrease, since it's negative) this number to adapt to longer license */
    top: -9300%;
  }
}

a {
}

